# dragonfly-ai

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  api.py  ask_query.py  main.py  prompt.py  pyproject.toml  requirements.txt  streamlit_app.py
cleaned_data/: CrunchTime.txt  Introduction.txt  Procrastination DF SCRIPTS.docx  ProcrastinationHack.txt  StudySkills.txt  TimeManagement.txt  ~$ocrastination DF SCRIPTS.docx
raw_data/: CrunchTime.vue  Introduction.vue  ProcrastinationHack.vue  StudySkills.vue  TimeManagement.vue  clean_text.py  cleaned_knowledge_base.json  introduction.js  main_legacy.py  rr.ipynb
